# smart_poultry_esp32_v2

./: CMakeLists.txt  README.md  build_errors.txt  sdkconfig.defaults
.github/workflows/: build-and-release.yml
components/actuators/: CMakeLists.txt
components/actuators/include/actuators/: actuator_manager.h
components/actuators/src/: actuator_manager.c
components/communication/: CMakeLists.txt
components/communication/include/communication/: communication.h
components/communication/src/: communication.c
components/control/: CMakeLists.txt
components/control/include/control/: control_system.h
components/control/src/: control_system.c
components/mesh/: CMakeLists.txt
components/mesh/include/mesh/: mesh_manager.h
components/mesh/src/: mesh_manager.c
components/monitoring/: CMakeLists.txt
components/monitoring/include/monitoring/: monitoring.h
components/monitoring/src/: monitoring.c
components/sensors/: CMakeLists.txt
components/sensors/include/sensors/: bme280_sensor.h  dht22.h  mq_sensor.h  sensor_manager.h  water_level_sensor.h  weight_sensor.h
components/sensors/src/: bme280_sensor.c  dht22.c  mq_sensor.c  sensor_manager.c  water_level_sensor.c  weight_sensor.c
components/utils/: CMakeLists.txt
components/utils/include/utils/: config.h
components/utils/src/: config.c
docs/: API_REFERENCE.md  CHANGELOG.md  CONTROL_ALGORITHMS.md  HARDWARE_SETUP.md  MESH_NETWORK.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
